[package]
description = "Iron middleware for the rusqlite SQLite library."
name = "iron_rusqlite_middleware"
version = "0.1.1"
authors = ["Kevin Midkiff <midkiff.km@gmail.com>"]
license = "MIT"
license-file = "LICENSE"

[dependencies]
iron = "0.5.1"
r2d2 = "0.7.3"
r2d2_sqlite = "0.2.1"
rusqlite = "0.12.0"
