[package]
name = "iron_rusqlite_middleware"
description = "Iron middleware for the rusqlite SQLite library."
repository = "https://github.com/KevinMidkiff/iron-rusqlite-middleware"
readme = "README.md"
version = "0.1.1"
authors = ["Kevin Midkiff <midkiff.km@gmail.com>"]
license = "MIT"
license-file = "LICENSE"

[dependencies]
iron = "0.5.1"
r2d2 = "0.8.2"
r2d2_sqlite = "0.7.0"
rusqlite = "0.15.0"
